--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script
+      defer
+      src="https://kit.fontawesome.com/11b11f4a4b.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Github Repo Search</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
